--- a/index.html
+++ b/index.html
@@ -23,28 +23,65 @@
         <div class="logo"><img src="./images/NAV.png" height="120"></div>
     </nav>
 
-    <!-- hero section with cards -->
+
+    <!-- second  section -->
+
+    <section class="second">
+        <div class="seperate-sections">
+
+
+            <div class="firstsection">
+                <div class="section">
+                    <div class="image"><img src="./images/image 11.png">
+                    </div>
+                    <h5>Welcome Back "Username"!</h5>
+                </div>
+                <div class="section">
+                    <button class="button1">Profile</button>
+                    <button class="button2">Rewards</button>
+
+                </div>
+
+            </div>
+
+            <div class="second-section">
+                <div class="image2"><img src="./images/sideimage.png ">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+    <!--  -->
+
+
+    <!-- hero  card section with cards -->
     <section id="hero">
 
-        <div class="card1">
-            <div class=" card-body">
-                <p class="card-text">Challenge Users, Place Bets and Win Money!</p>
-                <a href="#" class="card-link"></a>
+        <div class="border">
+            <div class="card1">
+                <div class=" card-body">
+                    <p class="card-text">Challenge Users, Place Bets and Win Money!</p>
+                    <a href="#" class="card-link"></a>
+                </div>
             </div>
-        </div>
 
-        <div class="card2">
-            <div class=" card-body">
-                <p class="card-text">Watch live matches of users battling it out.</p>
-                <a href="#" class="card-link"></a>
+            <div class="card2">
+                <div class=" card-body">
+                    <p class="card-text">Watch live matches of users battling it out.</p>
+                    <a href="#" class="card-link"></a>
+                </div>
             </div>
-        </div>
 
 
-        <div class="card3">
-            <div class=" card-body">
-                <p class="card-text">Refer Friends or Rank up and Win Rewards!</p>
-                <a href="#" class="card-link"></a>
+            <div class="card3">
+                <div class=" card-body">
+                    <p class="card-text">Refer Friends or Rank up and Win Rewards!</p>
+                    <a href="#" class="card-link"></a>
+                </div>
             </div>
         </div>
     </section>
@@ -52,42 +89,133 @@
     <!-- leaderboard details -->
     <section id="leaderboard">
         <div class="playerboard">
-            <h3>Season 1 LeaderBoard</h3>
-            <img src="./images/Vector.png" alt="Italian Trulli">
+            <h3>Season 1 LeaderBoard <img src="./images/Vector.png"></h3>
         </div>
+
 
         <table id="players">
             <tr>
+                <th>#</th>
                 <th>User</th>
                 <th>Rank</th>
-                <th>BestGame</th>
-                <th>Total wager</th>
-            </tr>
-            <tr>
-                <td>1 <img src="./images/image 1.png" alt="Italian Trulli"> Jack Mat </td>
-                <td>Rank</td>
-                <td><img src="./images/chess.png" alt="game name "></td>
-                <td>$1760.00</td>
+                <th>Game</th>
+                <th>Total Wins</th>
+                <th>Season Wager</th>
             </tr>
 
             <tr>
-                <td>2 <img src="./images/image 1.png" alt="Italian Trulli"> Jack Mat </td>
-                <td>Rank</td>
-                <td><img src="./images/chess.png" alt="game name "></td>
-                <td>$1760.00</td>
+                <td>1.</td>
+                <td> <img src="./images/jack.png"> Jack Mathew </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 105 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
             </tr>
 
             <tr>
-                <td>3 <img src="./images/image 1.png" alt="Italian Trulli"> Jack Mat </td>
-                <td>Rank</td>
-                <td><img src="./images/chess.png" alt="game name "></td>
-                <td>$1760.00</td>
+                <td>2.</td>
+                <td> <img src="./images/user2.png"> AceHighRoller </td>
+                <td><img src="./images/vector 3.png"> </td>
+                <td> <img src="./images/vector 2.png"></td>
+                <td> 85 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>3.</td>
+                <td> <img src="./images/user3.png"> BetMasterBlitz </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 82 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>4.</td>
+                <td> <img src="./images/user 4.png"> FortunePhantom </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 78 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>5.</td>
+                <td> <img src="./images/user 5.png"> GambleGuru </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 71 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 95,234</td>
+            </tr>
+
+            <tr>
+                <td>6.</td>
+                <td> <img src="./images/user6.png"> RiskRover </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 68 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 90,231</td>
+            </tr>
+
+            <tr>
+                <td>7.</td>
+                <td> <img src="./images/user 7.png"> BingoBaron </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 60 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>8.</td>
+                <td> <img src="./images/user 8.png"> TreasureTracker </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 55 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>9.</td>
+                <td> <img src="./images/user 9.png"> WagerWarrior </td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 53 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
+            </tr>
+
+            <tr>
+                <td>10.</td>
+                <td> <img src="./images/user 10.png"> LootLurker</td>
+                <td><img src="./images/rank.png"> </td>
+                <td> <img src="./images/game.png"></td>
+                <td> 50 wins <img src="./images/winner.png"></td>
+                <td><img src="./images/coin.png"> 130,232</td>
             </tr>
 
         </table>
     </section>
 
+    <!-- footer section  -->
 
+    <footer id="footer">
+        <div class="logo1">
+            <img src="./images/logo.png" height="100">
+        </div>
+
+        <div class="footeritems">
+            &nbsp;
+            <h5> FAQ |
+                Terms of services |
+                Cookies Policy |
+                Support |
+                Privacy Policy
+            </h5>
+            &nbsp;
+            <p> © 2024 ITEBET.com | All Rights Reserved.
+                © 2024 AlrightBET.com | All Rights Reserved| Terms & Service Applied .</p>
+        </div>
+    </footer>
 
 </body>
 </html>
